[yunpengx] update source code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,10 +45,12 @@ set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
 find_package(Boost REQUIRED COMPONENTS system)
 
-if(Boost_FOUND)
+if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
     include_directories(${Boost_INCLUDE_DIRS})
-    add_executable(${TARGET_TEST} ${SRCS_TEST})
-    target_link_libraries(${TARGET_TEST} boost_filesystem boost_system)
-    set_target_properties(${TARGET_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${GENERATED_BINARY_PATH})
-    message(\"${TARGET_TEST}\"\ is\ add\ to\ ${GENERATED_BINARY_PATH})
 endif()
+add_executable(${TARGET_TEST} ${SRCS_TEST})
+if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
+target_link_libraries(${TARGET_TEST} boost_filesystem boost_system)
+endif()
+set_target_properties(${TARGET_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${GENERATED_BINARY_PATH})
+message(\"${TARGET_TEST}\"\ is\ add\ to\ ${GENERATED_BINARY_PATH})
