[yunpengx] add test Map on QNX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,10 @@ message(The\ c++\ compiler\ is\ set\ to\ be\ \"${CMAKE_CXX_COMPILER}\")
 
 set(TARGET_TEST "ottoTest")
 #set(SRCS_TEST main.cc)
-set(SRCS_TEST parsecmd.cc testParseCmd.cc)
+#set(SRCS_TEST parsecmd.cc testParseCmd.cc)
+#set(SRCS_TEST test.cc)
+#set(SRCS_TEST testUdpConnection.cc)
+set(SRCS_TEST testMapOnQNX.cc)
 
 include_directories(../ottoware/src/include)
 
