update test Map for QNX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,6 @@ set(PLATFORM_QNX QNX)
 set(PLATFORM_UBUNTU UBUNTU)
 set(CURRENT_SUPPORT_PLATFORMS ${PLATFORM_QNX} ${PLATFORM_UBUNTU})
 
-## add generated dynamic library path
-set(GENERATED_LIBRARY_PATH  ${CMAKE_SOURCE_DIR}/lib)
-## add generated binary path
-set(GENERATED_BINARY_PATH ${CMAKE_SOURCE_DIR}/bin)
-
 if (CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_QNX})
 ## Suppose you have already set QNX_HOST in ~/.bashrc
 ## Example: export QNX_BASE=$HOME/qnx700
@@ -24,18 +19,35 @@ if (CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_QNX})
     set(CMAKE_CXX_FLAGS "-Wall -lang-c++ -Vgcc_ntox86_64")
     set(CMAKE_C_COMPILER   ${tools}/qcc)
     set(CMAKE_CXX_COMPILER ${tools}/qcc)
+    ## add generated dynamic library path
+    set(GENERATED_LIBRARY_PATH  ${CMAKE_SOURCE_DIR}/lib/qnx)
+    ## add generated binary path
+    set(GENERATED_BINARY_PATH ${CMAKE_SOURCE_DIR}/bin/qnx)
     ## add definitions command for diffent platforms, can be used as macro definition "#ifdef PLATFORM_QNX" in source code
     add_definitions(-DPLATFORM_QNX)
 elseif(CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
     set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
     set(CMAKE_C_COMPILER gcc)
     set(CMAKE_CXX_COMPILER g++)
+    set(GENERATED_LIBRARY_PATH  ${CMAKE_SOURCE_DIR}/lib/ubuntu)
+    set(GENERATED_BINARY_PATH ${CMAKE_SOURCE_DIR}/bin/ubuntu)
     add_definitions(-DPLATFORM_UBUNTU)
 else(CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_QNX})
     message(FATAL_ERROR "The\ current\ support\ platforms\ are:\ ${CURRENT_SUPPORT_PLATFORMS}")
 endif(CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_QNX})
 message(The\ c++\ compiler\ is\ set\ to\ be\ \"${CMAKE_CXX_COMPILER}\")
 
+include_directories(../ottoware/src/include)
+
+set(TARGET_TEST1_LIB "Test1")
+set(SRCS_TEST1_LIB testClass1.cc)
+add_library(${TARGET_TEST1_LIB} SHARED ${SRCS_TEST1_LIB})
+set_target_properties(${TARGET_TEST1_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
+
+set(TARGET_TEST2_LIB "Test2")
+set(SRCS_TEST2_LIB testClass2.cc)
+add_library(${TARGET_TEST2_LIB} SHARED ${SRCS_TEST2_LIB})
+set_target_properties(${TARGET_TEST2_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
 
 set(TARGET_TEST "ottoTest")
 #set(SRCS_TEST main.cc)
@@ -44,7 +56,6 @@ set(TARGET_TEST "ottoTest")
 #set(SRCS_TEST testUdpConnection.cc)
 set(SRCS_TEST testMapOnQNX.cc)
 
-include_directories(../ottoware/src/include)
 
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
@@ -56,7 +67,7 @@ if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
 endif()
 add_executable(${TARGET_TEST} ${SRCS_TEST})
 if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
-target_link_libraries(${TARGET_TEST} boost_filesystem boost_system)
+target_link_libraries(${TARGET_TEST} Test boost_filesystem boost_system)
 endif()
 set_target_properties(${TARGET_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${GENERATED_BINARY_PATH})
 message(\"${TARGET_TEST}\"\ is\ add\ to\ ${GENERATED_BINARY_PATH})
