--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,23 +39,23 @@ message(The\ c++\ compiler\ is\ set\ to\ be\ \"${CMAKE_CXX_COMPILER}\")
 
 include_directories(../ottoware/src/include)
 
-set(TARGET_TEST1_LIB "Test1")
-set(SRCS_TEST1_LIB testClass1.cc)
-add_library(${TARGET_TEST1_LIB} SHARED ${SRCS_TEST1_LIB})
-set_target_properties(${TARGET_TEST1_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
+#set(TARGET_TEST1_LIB "Test1")
+#set(SRCS_TEST1_LIB testClass1.cc)
+#add_library(${TARGET_TEST1_LIB} SHARED ${SRCS_TEST1_LIB})
+#set_target_properties(${TARGET_TEST1_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
 
-set(TARGET_TEST2_LIB "Test2")
-set(SRCS_TEST2_LIB testClass2.cc)
-add_library(${TARGET_TEST2_LIB} SHARED ${SRCS_TEST2_LIB})
-set_target_properties(${TARGET_TEST2_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
+#set(TARGET_TEST2_LIB "Test2")
+#set(SRCS_TEST2_LIB testClass2.cc)
+#add_library(${TARGET_TEST2_LIB} SHARED ${SRCS_TEST2_LIB})
+#set_target_properties(${TARGET_TEST2_LIB} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${GENERATED_LIBRARY_PATH})
 
 set(TARGET_TEST "ottoTest")
 #set(SRCS_TEST main.cc)
 #set(SRCS_TEST parsecmd.cc testParseCmd.cc)
 #set(SRCS_TEST test.cc)
 #set(SRCS_TEST testUdpConnection.cc)
-set(SRCS_TEST testMapOnQNX.cc)
-
+#set(SRCS_TEST testMapOnQNX.cc)
+set(SRCS_TEST testPubSetBuf.cc)
 
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
@@ -66,8 +66,8 @@ if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
 add_executable(${TARGET_TEST} ${SRCS_TEST})
-if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
-target_link_libraries(${TARGET_TEST} Test boost_filesystem boost_system)
-endif()
+#if(Boost_FOUND AND CMAKE_BUILD_PLATFORM STREQUAL ${PLATFORM_UBUNTU})
+#target_link_libraries(${TARGET_TEST} Test boost_filesystem boost_system)
+#endif()
 set_target_properties(${TARGET_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${GENERATED_BINARY_PATH})
 message(\"${TARGET_TEST}\"\ is\ add\ to\ ${GENERATED_BINARY_PATH})
